--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,11 +39,18 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     /*implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'*/
-    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
+   /* implementation 'com.android.support.constraint:constraint-layout:2.0.4'
+    implementation 'com.android.support:appcompat-v7:28.0.0'*/
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    //places
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
+    implementation 'com.google.android.gms:play-services-places:17.0.0'
+    implementation 'com.google.android.libraries.places:places:2.4.0'
+
 }
